--- a/appworkmap.css
+++ b/appworkmap.css
@@ -6,7 +6,7 @@
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #d1ffbf; /* Light green background */
+    background-color: #d1ffbf; 
     border-radius: 10px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   }
